# opengl-model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-release.bat  build-release.sh  build.bat  build.sh
res/shaders/: default.fs  default.vs  mask.fs  mask.vs  phong.fs  phong.vs  tex-lit.fs  tex-lit.vs  unlit-color.fs  unlit-tex.fs  unlit-tex.vs
src/: program.cpp
src/core/: log.hpp  resource_manager.cpp  resource_manager.hpp  scene.hpp  ui_manager.cpp  ui_manager.hpp
src/misc/: utils.hpp
src/rendering/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_uniform.cpp  shader_uniform.hpp  texture.cpp  texture.hpp
